# dvg-randomizer

./: .gitignore  CHANGES.md  DejaVuSansCondensed.pkl  LICENSE  MANIFEST.in  README.md  dvg  pyproject.toml  randomizer  randomizer.py  release
dvg/: aircraft.py  boardgame.py  campaign.py  data.py  game.py  gui.py  logger.py  logsheet.py  pilot.py
dvg/csv/: aircrafts.csv  allowed.csv  campaign_costs.csv  campaigns.csv  dvg.ods  forbidden.csv  pilots.csv  prohibition.csv
dvg_randomizer/: __main__.py  aircraft.py  boardgame.py  campaign.py  common.py  config.py  data.py  dvg.ods  game.py  logger.py  logsheet.py  pilot.py
dvg_randomizer/csv/: aircrafts.csv  pilots.csv  spruance.csv
dvg_randomizer/data/: aircrafts.csv  allowed.csv  boardgames.csv  campaigns.csv  corsair.json  corsair.yaml  csv2json.py  csv2yaml.py  dvg.ods  hornet.json  hornet.yaml  israeli.json  israeli.yaml  phantom.json  phantom.yaml  pilots.csv  spruance.json  spruance.yaml  y2json  zero.json  zero.yaml
dvg_randomizer/gui/: composition.py  main.py
dvg_randomizer/ui/: base.py  console.py  graphical.py  scroll_frame.py
gui/: composition.py  main.py
lib/: abbrev.py  aircraft.py  boardgame.py  campaign.py  gui.py  jq  pilot.py
lib/data/: games.csv
lib/data/cl/: aircrafts.json  campaigns.json  pilots.json
lib/data/hlcao/: aircrafts.json  campaigns.json  pilots.json
lib/data/iafl/: aircrafts.json  campaigns.json  pilots.json
lib/data/pl/: aircrafts.json  pilots.json
lib/data/pld/: aircrafts.json  campaigns.json
lib/data/zl/: aircrafts.json  campaigns.jq.json  campaigns.json  pilots.json
lib/dvg/: __init__.py  data.py
tests/: conftest.py  test_aircraft.py
