[project]
name = "dvg-randomizer"
version = "1.5.1"
authors = [
  { name="Jerome Quelin", email="jquelin@gmail.com" },
]
description = "Randomizer app for DVG Leader boardgames"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
license-files = ["LICENSE", "COPYING"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "appdirs",
    "colorlog",
    "fpdf",
    "pyexcel_ods",
    "pyyaml",
    "cmd2",
]

[project.scripts]
dvg-randomizer = "dvg_randomizer.__main__:run"

[project.urls]
"Homepage" = "https://github.com/jquelin/dvg-randomize"
"Bug Tracker" = "https://github.com/jquelin/dvg-randomize/issues"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pip>=24.0",
    "pytest>=7.4.4",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dvg_randomizer*"]

[tool.setuptools.package-data]
dvg_randomizer = ["*.ods", "misc/*.ttf", "ui/*.png"]
